--- a/src/templates/pages/good-card.pug
+++ b/src/templates/pages/good-card.pug
@@ -39,7 +39,7 @@ block content
                                 small.good-card__vendor-code Артикул: 
                                 small.good-card__vendor-code 113263RS502
                             .good-card__price 
-                                span 3500
+                                span.number-spaced 3500
                                 span &nbsp;&#8381;
                             .good-card__add-to-cart-block 
                                 form.good-card__form(action="#")
@@ -137,8 +137,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -151,8 +151,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -165,8 +165,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -179,8 +179,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -193,8 +193,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -207,8 +207,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -221,8 +221,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -235,5 +235,5 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
