--- a/src/templates/pages/home-page.pug
+++ b/src/templates/pages/home-page.pug
@@ -50,8 +50,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -64,8 +64,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -78,8 +78,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -92,8 +92,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -106,8 +106,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -120,8 +120,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -134,8 +134,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -148,8 +148,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
             section.section.new.section__slider
                 .container
                     .section__heading.slider__heading 
@@ -177,8 +177,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -191,8 +191,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -205,8 +205,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -219,8 +219,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -233,8 +233,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -247,8 +247,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -261,8 +261,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -275,8 +275,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
             section.section.new-collection
                 .new-collection__img-box
                     img.new-collection__bg-img(src="assets/images/new-collection-bg-img.jpg" alt="Фото модели в одежде из новой коллекции")
@@ -342,8 +342,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -356,8 +356,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -370,8 +370,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -384,8 +384,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -398,8 +398,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией 
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -412,8 +412,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381; 
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381; 
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -426,8 +426,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
                                 .swiper-slide
                                     .slider3__item
                                         .add-to-cart__box 
@@ -440,8 +440,8 @@ block content
                                         .slider3__text-block 
                                             .slider3__text-box
                                                 p.slider3__text Кроссовки черные на высокой подошве с молнией
-                                                span.slider3__price 3500&nbsp;
-                                                span.slider3__currency &#8381;
+                                                span.slider3__price.number-spaced 3500
+                                                span.slider3__currency &nbsp; &#8381;
 
 
 
