--- a/src/templates/pages/subcategory.pug
+++ b/src/templates/pages/subcategory.pug
@@ -44,8 +44,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией 
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -57,8 +57,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381; 
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381; 
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -70,8 +70,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину  
@@ -83,8 +83,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией 
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -96,8 +96,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381; 
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381; 
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -109,8 +109,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину  
@@ -122,8 +122,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией 
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -135,8 +135,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381; 
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381; 
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -148,8 +148,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину  
@@ -161,8 +161,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией 
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -174,8 +174,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381; 
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381; 
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -187,8 +187,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину  
@@ -200,8 +200,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией 
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -213,8 +213,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381; 
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381; 
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -226,8 +226,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
                             .goods__item
                                 .add-to-cart__box 
                                     a.add-to-cart__link(href="#") Добавить в корзину 
@@ -239,8 +239,8 @@ block content
                                 .goods__text-block 
                                     .goods__text-box
                                         p.goods__text Кроссовки черные на высокой подошве с молнией
-                                        span.goods__price 3500&nbsp;
-                                        span.goods__currency &#8381;
+                                        span.goods__price.number-spaced 3500
+                                        span.goods__currency &nbsp; &#8381;
             
             section.section.page-pagination 
                 .container 
