--- a/src/styles/pages/my-data.sass
+++ b/src/styles/pages/my-data.sass
@@ -7,7 +7,7 @@
 		width: 100%
 		gap: 20px
 	&__nav
-		flex: 0 0 440px
+		flex: 0 333px
 		margin: 0
 	&__bonus-box
 		margin: 47px 0 0 0
@@ -28,6 +28,10 @@
 		font-weight: bold
 		font-size: 24px
 		line-height: 28px
+	&__tabs-items
+		flex: 1 1 auto
+	&__tabs-block#block01
+		margin: 0 0 0 107px
 	&__form
 		width: 100%
 		max-width: 570px
@@ -53,6 +57,9 @@
 		background-color: $color-Gray_4
 		border: 1px solid #D9D9D9
 		padding: 14px 20px
+		&:hover,
+		&:focus
+			box-shadow: 0 0 3px 3px $color-Gray_3
 	&__form-link,
 	&__form-btn
 		align-self: flex-start
@@ -60,9 +67,25 @@
 		margin: -20px 0 0 0
 		font-size: 16px
 		line-height: 18px
-		text-decoration: underline
+		// text-decoration: underline
 		color: $color-Black
-		padding: 10px 0
+		padding: 10px 1px
+		border-radius: 5px
+		position: relative
+		&::after
+			position: absolute
+			top: 77%
+			left: 0
+			content: ""
+			width: 100%
+			height: 1px
+			display: block
+			background-color: $color-Black
+		&:hover
+			&::after
+				display: none	
+		&:focus
+			box-shadow: 0 0 2px 2px $color-Gray_3
 	&__form-btn
 		margin: 8px 0 0 0
 		width: 100%
@@ -77,6 +100,11 @@
 		font-size: 14px
 		line-height: 150%
 		text-transform: uppercase
+		&:hover,
+		&:focus
+			box-shadow: 0 0 3px 3px $color-Gray_3	
+	&__tabs-block#block03
+		margin: 0 0 0 117px
 	&__orders-history-heading
 		margin: 30px 0 0 0
 	&__orders-history-title
@@ -101,3 +129,115 @@
 		line-height: 150%
 		text-transform: uppercase
 		border-radius: 5px
+
+.account-orders
+	&__heading
+		min-height: 80px
+		border: none
+		border-bottom: 1px solid #CBCBCB
+		margin: 0
+	&__name
+		color: $color-black_3
+		margin: 0 0 10px 0
+		font-size: 16px
+		line-height: 140%
+	&__vendor-code
+		font-size: 12px
+		line-height: 14px
+		color: #999999
+	&__size,
+	&__quantity
+		font-size: 16px
+		line-height: 140%
+		color: #919191
+	&__size-value
+		font-size: 16px
+		line-height: 140%
+		margin: 0 0 0 26px
+		color: $color-black_3
+	&__quantity-value
+		font-size: 16px
+		line-height: 140%
+		margin: 0 0 0 29px
+		color: $color-black_3
+	&__price,
+	&__price-currency
+		font-size: 16px
+		line-height: 140%
+		font-weight: bold
+		color: $color-black_3
+	.ac-trigger
+		width: 100%
+		height: 100%
+		padding: 30px 0 28px 0
+		font-weight: bold
+		font-size: 16px
+		line-height: 140%
+		transition: all 0.3s ease 0s
+		&:focus
+			color: $color-Black
+		&::after
+			content: 'Развернуть'
+			text-decoration: underline
+			width: fit-content
+			transform: translate(0, -50%)
+			right: 0
+			font-size: 16px
+			line-height: 18px
+			font-weight: 400
+		span
+			margin: 0 0 0 44px
+	.ac-panel
+		transition: all 0.3s ease 0s
+	.ac-content-row
+		display: flex
+		justify-content: space-between
+		align-items: flex-start
+		column-gap: 32px
+		padding: 20px 0
+		border-bottom: 1px solid #F3F3F3
+		&__total
+			border-top: 1px solid #CBCBCB
+			padding: 30px 0 48px 0
+			justify-content: flex-end
+			height: 164px
+
+	.ac-content-col
+		flex: 1 1 auto
+		&:first-child
+			flex: 0 0 433px
+		&__items
+			display: flex
+			column-gap: 32px
+		&__item:first-child
+			flex: 0 0 107px
+		&__item:last-child
+			flex: 0 0 228px	
+		&__total
+			flex: auto
+			width: 100%
+			max-width: 100px
+			height: 100%
+			display: flex
+			flex-direction: column
+			justify-content: flex-start
+			row-gap: 5px
+			font-size: 16px
+			line-height: 140%
+			color: $color-black_3
+			.total__ammount,
+			.total__ammount-value
+				margin-top: auto
+				font-weight: bold
+	.img-box
+		max-width: 107px
+		width: 100%
+	.ac-content-col
+		&:last-child
+			text-align: end
+.account-orders__heading.is-active
+	.ac-trigger
+		&::after
+			content: 'Свернуть'
+	.ac-panel
+		border-top: 1px solid #CBCBCB
